[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Fredrik Jonsén <fredrik@jonsen.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
regex = "1.5.4"
lazy_static = "1.4.0"
maplit = "1.0.2"
itertools = "0.10.1"
test-case = "1.1.0"
